<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.main.activities.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageModule"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/main_grey"
                android:contentDescription="@string/module_image"
                android:padding="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/spring"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/iconStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/star_circle_layout"
                android:contentDescription="@string/todo"
                android:padding="24dp"
                android:src="@drawable/ic_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageModule" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/filesTitle"
                app:layout_constraintTop_toTopOf="@+id/filesTitle" />

            <TextView
                android:id="@+id/firstTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/tags_background"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                android:text="@string/Java"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageModule" />


            <TextView
                android:id="@+id/titleModule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/spring_boot"
                android:textColor="@color/main_green"
                android:textSize="19sp"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="@id/firstTag"
                app:layout_constraintTop_toBottomOf="@id/firstTag" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/professor"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/firstTag"
                app:layout_constraintTop_toBottomOf="@+id/titleModule" />

            <TextView
                android:id="@+id/filesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/files"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/professorName"
                app:layout_constraintTop_toBottomOf="@+id/semesterText" />

            <TextView
                android:id="@+id/periodTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/period"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/titleModule" />

            <TextView
                android:id="@+id/semesterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_1st_semester"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="@+id/periodTitle"
                app:layout_constraintTop_toBottomOf="@+id/periodTitle" />

            <TextView
                android:id="@+id/professorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mr_atlas"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@id/filesTitle"
                app:layout_constraintTop_toBottomOf="@id/filesTitle">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>