<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root_vg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background">


        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:elevation="8dp"
                android:src="@drawable/ic_school_icon" />

            <TextView
                android:id="@+id/txttite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_your_module"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/listModulesSpinner"
                style="@style/oneInputFormSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_input_home_page" />

            <!--            <androidx.recyclerview.widget.RecyclerView-->
            <!--                android:id="@+id/notesRV"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_marginTop="5dp"-->
            <!--                tools:listitem="@layout/note_rv_item" />-->
            <TextView
                android:id="@+id/titleFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/choose_your_file"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_back_button"
                android:gravity="center"
                android:padding="16dp"
                android:hint="@string/click_here"
                android:textColorHint="@color/label_grey"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp"
                android:backgroundTint="@color/white"
                android:text="@string/done"
                android:textColor="@color/black" />
        </LinearLayout>


    </RelativeLayout>
</layout>